--- a/proceedings/gluon_pdf.tex
+++ b/proceedings/gluon_pdf.tex
@@ -80,7 +80,7 @@ As we move to higher values of the $gg$ purity, the less constrained gluon PDF s
 
 We can now attempt to assess how good a tagger we should devise in order for the gluon-jet $p_t$ spectrum to be able to constrain the gluon PDF at relatively large $x$. To this purpose, we would like to achieve a situation where the PDF uncertainty is the largest uncertainty, i.e.\ it dominates over the other theoretical and experimental uncertainties. For this feasibility study, we have decided to neglect uncertainties related to the tagging procedure, which can be evaluated, for a given algorithm, using standard scale-variation based, methods. Instead, we concentrate on experimental systematic and statistical uncertainties. These uncertainties are shown on the plot in Fig.~\ref{fig:pdf_unc_studies}, on the right, as function fo the $gg$ purity, for a (yet-to-be-defined) tagging procedure that works at $\varepsilon_g=0.42$ gluon efficiency~\footnote{Instead of fixing the gluon efficiency, we could have specified the $qq$ contamination, which directly corresponds to an horizontal slice of the left-hand plot of Fig.~\ref{fig:pdf_unc_studies}. However, in view of the discussion about taggers that will follow, we find the efficiency more informative.}. 
 %
-The experimental systematic uncertainty (in dotted red)  is assumed to be a half of the one reported by the LHC collaboration in 2015~\cite{} \sm{Ben can you add the ref please?}, i.e.\ of the order of 5\%. The statistical uncertainty (in dashed green) correspond to an integrated luminosity of 300 fb$^-1$, i.e.\ roughly the amount of date collected by the end of Run~III of the LHC \sm{Is this true?} 
+The experimental systematic uncertainty (in dotted red)  is assumed to be a half of the one reported by the LHC collaboration in 2015~\cite{} \sm{Ben can you add the ref please?}, i.e.\ of the order of 5\%. The statistical uncertainty (in dashed green) correspond to an integrated luminosity of 300 fb$^{-1}$, i.e.\ roughly the amount of date collected by the end of Run~III of the LHC.
 %
 We conclude that the PDF uncertainty becomes the dominant one if the $gg$ purity is above 0.3, for $\varepsilon_g=0.42$. Thus, this sets the goal for our tagger.
 
