--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,6 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+
+@book{Marzani:2019hun,
+    author = "Marzani, Simone and Soyez, Gregory and Spannowsky, Michael",
+    archivePrefix = "arXiv",
+    doi = "10.1007/978-3-030-15709-8",
+    eprint = "1901.10342",
+    primaryClass = "hep-ph",
+    publisher = "Springer",
+    title = "Looking inside jets: an introduction to jet substructure and boosted-object phenomenology",
+    volume = "958",
+    year = "2019"
+}
+
+@article{Larkoski:2017jix,
+    author = "Larkoski, Andrew J. and Moult, Ian and Nachman, Benjamin",
+    archivePrefix = "arXiv",
+    doi = "10.1016/j.physrep.2019.11.001",
+    eprint = "1709.04464",
+    journal = "Phys.Rept.",
+    pages = "1--63",
+    primaryClass = "hep-ph",
+    title = "Jet Substructure at the Large Hadron Collider: A Review of Recent Advances in Theory and Machine Learning",
+    volume = "841",
+    year = "2020"
+}
+
 @article{Aad:2019onw,
       author         = "Aad, Georges and others",
       title          = "{Properties of jet fragmentation using charged particles
@@ -775,17 +801,6 @@ url="https://doi.org/10.1140/epjc/s2004-01891-4"
       primaryClass   = "hep-ex",
       reportNumber   = "FERMILAB-PUB-18-123-PPD",
       SLACcitation   = "%%CITATION = ARXIV:1803.06991;%%"
-}
-@article{Larkoski:2017jix,
-      author         = "Larkoski, Andrew J. and Moult, Ian and Nachman, Benjamin",
-      title          = "{Jet Substructure at the Large Hadron Collider: A Review
-                        of Recent Advances in Theory and Machine Learning}",
-      doi            = "10.1016/j.physrep.2019.11.001",
-      year           = "2017",
-      eprint         = "1709.04464",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:1709.04464;%%"
 }
 
 @article{Gras:2017jty,
