added new plots from Gregory

--- a/proceedings/gluon_pdf.tex
+++ b/proceedings/gluon_pdf.tex
@@ -49,7 +49,7 @@ With the same Born-level setup, we can study how the different partonic final-st
 \includegraphics[width=0.49\textwidth, page=2]{figs/performance-plots.pdf}
 \caption{The plot on the left shows the PDF uncertainty, evaluated using the NNLO set from NNPDF3.1 as a function of $gg$ purity and $qq$ contamination, as defined in the text.
 %
-The plot on the right shows how the PDF uncertainty compared to experimental systematic and statistical uncertainties, as a function of the $gg$ purity, assuming that  gluon jets have been identified using a tagger with efficiency $\varepsilon_g=0.42$. \sm{Relabel y-axis to something like: uncertainty (\%).}}
+The plot on the right shows how the PDF uncertainty compared to experimental systematic and statistical uncertainties, as a function of the $gg$ purity, assuming that  gluon jets have been identified using a tagger with efficiency $\varepsilon_g=0.42$.}
 \label{fig:pdf_unc_studies} 
 \end{center}
 \end{figure}
