--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,6 +1,121 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
+@article{Aad:2019onw,
+      author         = "Aad, Georges and others",
+      title          = "{Properties of jet fragmentation using charged particles
+                        measured with the ATLAS detector in $pp$ collisions at
+                        $\sqrt{s}=13$ TeV}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Rev.",
+      volume         = "D100",
+      year           = "2019",
+      number         = "5",
+      pages          = "052011",
+      doi            = "10.1103/PhysRevD.100.052011",
+      eprint         = "1906.09254",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2019-090",
+      SLACcitation   = "%%CITATION = ARXIV:1906.09254;%%"
+}
 
+@article{lundPlane,
+      author         = "Dreyer, Frédéric A. and Salam, Gavin P. and Soyez,
+                        Grégory",
+      title          = "{The Lund Jet Plane}",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2018",
+      pages          = "064",
+      doi            = "10.1007/JHEP12(2018)064",
+      eprint         = "1807.04758",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-2018-151",
+      SLACcitation   = "%%CITATION = ARXIV:1807.04758;%%"
+}
+
+@article{lundAtlas,
+      author         = "The ATLAS collaboration",
+      title          = "{Measurement of the Lund Jet Plane using charged
+                        particles with the ATLAS detector from 13 TeV
+                        proton--proton collisions}",
+      collaboration  = "ATLAS",
+      year           = "2019",
+      reportNumber   = "ATLAS-CONF-2019-035",
+      SLACcitation   = "%%CITATION = ATLAS-CONF-2019-035;%%"
+}
+
+@article{Komiske:2018vkc,
+      author         = "Komiske, Patrick T. and Metodiev, Eric M. and Thaler,
+                        Jesse",
+      title          = "{An operational definition of quark and gluon jets}",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2018",
+      pages          = "059",
+      doi            = "10.1007/JHEP11(2018)059",
+      eprint         = "1809.01140",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP 5042",
+      SLACcitation   = "%%CITATION = ARXIV:1809.01140;%%"
+}
+
+@article{Metodiev:2018ftz,
+      author         = "Metodiev, Eric M. and Thaler, Jesse",
+      title          = "{Jet Topics: Disentangling Quarks and Gluons at
+                        Colliders}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "120",
+      year           = "2018",
+      number         = "24",
+      pages          = "241602",
+      doi            = "10.1103/PhysRevLett.120.241602",
+      eprint         = "1802.00008",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4979",
+      SLACcitation   = "%%CITATION = ARXIV:1802.00008;%%"
+}
+
+
+
+@article{Khachatryan:2015bnx,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Search for the standard model Higgs boson produced
+                        through vector boson fusion and decaying to $b
+                        \overline{b}$}",
+      collaboration  = "CMS",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
+      year           = "2015",
+      number         = "3",
+      pages          = "032008",
+      doi            = "10.1103/PhysRevD.92.032008",
+      eprint         = "1506.01010",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-14-004, CERN-PH-EP-2015-121, CMS-HIG-14-004",
+      SLACcitation   = "%%CITATION = ARXIV:1506.01010;%%"
+}
+
+@article{Czakon:2015owf,
+      author         = "Czakon, Michal and Heymes, David and Mitov, Alexander",
+      title          = "{High-precision differential predictions for top-quark
+                        pairs at the LHC}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "116",
+      year           = "2016",
+      number         = "8",
+      pages          = "082003",
+      doi            = "10.1103/PhysRevLett.116.082003",
+      eprint         = "1511.00549",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-15-10, TTK-15-34",
+      SLACcitation   = "%%CITATION = ARXIV:1511.00549;%%"
+}
 
 @book{Marzani:2019hun,
     author = "Marzani, Simone and Soyez, Gregory and Spannowsky, Michael",
@@ -13,7 +128,50 @@
     volume = "958",
     year = "2019"
 }
-
+@article{Komiske:2018cqr,
+      author         = "Komiske, Patrick T. and Metodiev, Eric M. and Thaler,
+                        Jesse",
+      title          = "{Energy Flow Networks: Deep Sets for Particle Jets}",
+      journal        = "JHEP",
+      volume         = "01",
+      year           = "2019",
+      pages          = "121",
+      doi            = "10.1007/JHEP01(2019)121",
+      eprint         = "1810.05165",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP 5064",
+      SLACcitation   = "%%CITATION = ARXIV:1810.05165;%%"
+}
+@article{Komiske:2019asc,
+      author         = "Komiske, Patrick T. and Metodiev, Eric M. and Thaler,
+                        Jesse",
+      title          = "{Cutting Multiparticle Correlators Down to Size}",
+      year           = "2019",
+      eprint         = "1911.04491",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP 5150",
+      SLACcitation   = "%%CITATION = ARXIV:1911.04491;%%"
+}
+@inproceedings{DBLP:conf/nips/ZaheerKRPSS17,
+  author    = {Manzil Zaheer and
+               Satwik Kottur and
+               Siamak Ravanbakhsh and
+               Barnab{\'{a}}s P{\'{o}}czos and
+               Ruslan Salakhutdinov and
+               Alexander J. Smola},
+  title     = {Deep Sets},
+  booktitle = {Advances in Neural Information Processing Systems 30: Annual Conference
+               on Neural Information Processing Systems 2017, 4-9 December 2017,
+               Long Beach, CA, {USA}},
+  pages     = {3391--3401},
+  year      = {2017},
+  url       = {http://papers.nips.cc/paper/6931-deep-sets},
+  timestamp = {Tue, 23 Jul 2019 12:44:35 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/nips/ZaheerKRPSS17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 @article{Larkoski:2017jix,
     author = "Larkoski, Andrew J. and Moult, Ian and Nachman, Benjamin",
     archivePrefix = "arXiv",
@@ -5528,6 +5686,71 @@ url="https://doi.org/10.1140/epjc/s2004-01891-4"
 	Year = {2010},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-010-1314-6}}
 
+@article{Khachatryan:2016hje,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Search for Resonant Production of High-Mass Photon Pairs
+                        in Proton-Proton Collisions at $\sqrt s$ =8 and 13 TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "117",
+      year           = "2016",
+      number         = "5",
+      pages          = "051802",
+      doi            = "10.1103/PhysRevLett.117.051802",
+      eprint         = "1606.04093",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-16-018, CERN-EP-2016-154",
+      SLACcitation   = "%%CITATION = ARXIV:1606.04093;%%"
+}
+@article{Aaboud:2016tru,
+      author         = "Aaboud, Morad and others",
+      title          = "{Search for resonances in diphoton events at
+                        $\sqrt{s}$=13 TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "09",
+      year           = "2016",
+      pages          = "001",
+      doi            = "10.1007/JHEP09(2016)001",
+      eprint         = "1606.03833",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2016-120",
+      SLACcitation   = "%%CITATION = ARXIV:1606.03833;%%"
+}
+
+@article{Nayak:2019quy,
+      author         = "Nayak, Aruna Kumar and Rai, Santosh Kumar and Samui,
+                        Tousik",
+      title          = "{Probing Heavy Dijet Resonances Using Jet Substructure at
+                        the LHC}",
+      year           = "2019",
+      eprint         = "1912.03511",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "HRI-RECAPP-2019-005",
+      SLACcitation   = "%%CITATION = ARXIV:1912.03511;%%"
+}
+@article{Aaboud:2017jcu,
+      author         = "Aaboud, M. and others",
+      title          = "{Jet energy scale measurements and their systematic
+                        uncertainties in proton-proton collisions at $\sqrt{s} =
+                        13$ TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Rev.",
+      volume         = "D96",
+      year           = "2017",
+      number         = "7",
+      pages          = "072002",
+      doi            = "10.1103/PhysRevD.96.072002",
+      eprint         = "1703.09665",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2017-038",
+      SLACcitation   = "%%CITATION = ARXIV:1703.09665;%%"
+}
+
 @article{Sjostrand:2014zea,
 	Archiveprefix = {arXiv},
 	Doi = {10.1016/j.cpc.2015.01.024},
@@ -5541,6 +5764,22 @@ url="https://doi.org/10.1140/epjc/s2004-01891-4"
 	Volume = {191},
 	Year = {2015},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.cpc.2015.01.024}}
+@article{Buckley:2009bj,
+      author         = "Buckley, Andy and Hoeth, Hendrik and Lacker, Heiko and
+                        Schulz, Holger and von Seggern, Jan Eike",
+      title          = "{Systematic event generator tuning for the LHC}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C65",
+      year           = "2010",
+      pages          = "331-357",
+      doi            = "10.1140/epjc/s10052-009-1196-7",
+      eprint         = "0907.2973",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-09-52, DCPT-104-22, LU-TP-09-18, HU-EP-09-33,
+                        MCNET-09-14",
+      SLACcitation   = "%%CITATION = ARXIV:0907.2973;%%"
+}
 
 @article{Altheimer:2013yza,
 	Archiveprefix = {arXiv},
