fixed some links

--- a/proceedings/tuning.tex
+++ b/proceedings/tuning.tex
@@ -94,7 +94,7 @@ degraded agreement for the $\beta=2$ jet mass distribution.
 \end{figure}
 
 
-The full set of tuned parameters and their uncertainties is shown in Table~\ref{tuneResults}. 
+The full set of tuned parameters and their uncertainties is shown in Table~\ref{tab:tuneResults}. 
 While the agreement of a specific observable typically cannot be linked directly linked to a single tuned parameter, some trends are observed.
 Tunes produced from Ref~\cite{softdropObs} tend to have a larger value for TimeShower:alphaSvalue. No other obvious trends can be seen compared to the high-$p_T$ mass tunes, 
 indicating that this could be related to the slope seen for the soft drop $\beta=2$ mass distribution.
